# vram-optimizer

./: CMakeLists.txt  README.md
compressor/: TextureCompressor.cpp  TextureCompressor.h
hook/: HookDX11.cpp  HookDX11.h  HookDX11_Compress.cpp  HookDX11_Textures.cpp
injector/: Injector.cpp  Injector.h  injector_main.cpp
ipc/: IPCProtocol.h  IPCServer.cpp  IPCServer.h  IPCStatusServer.cpp  IPCStatusServer.h
monitor/: VRAMMonitor.cpp  VRAMMonitor.h
orchestrator/: Orchestrator.cpp  Orchestrator.h
src/: main.cpp
ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VRAMOptimizer.UI.csproj
